# Operation

./: .gitIgnore  .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt  simplex.hpp  testConcat.cc  testMapGen.cc  testSimplex.cc  testUnorder.cc
cpp/include/: MapGen.hpp  prints.hpp  simplex.hpp
cpp/src/: MapGen.cc  simplex.cc
huge/: aco.py  algos.py  ga_mtsp.py  ga_result.py  greedy.py  readFromFile.py
py/: GaussNewton.py  QuasiNewton.py  RG.py  conj.py  homework.ipynb  lineSearch.py  optims.py
randomKruscal/: testKruscal.cpp
randomKruscal/include/: kruscal.h
randomKruscal/src/: kruscal.c
randomKruskal/: testKruskal.cpp
randomKruskal/include/: kruskal.h
randomKruskal/src/: kruskal.c
